tests/httpd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpd
  labels:
    app.kubernetes.io/name: httpd
spec:
  ingressClassName: traefik
  rules:
  - host: httpd.lab.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: httpd
            port: 
              number: 80
